overflow content fixed

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -20,6 +21,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: white;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 h1 {
